--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <div class="abajo" id="Quienes somos">
     <div class="nos">
     <h2 >Quienes somos</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, ab? Corrupti, aliquam cupiditate odit corporis nulla fugit eius odio dolor. Dicta labore in, fuga unde doloremque voluptatem eaque itaque culpa laudantium corrupti maiores eius, natus commodi distinctio ab harum est iure cum sapiente, repudiandae voluptatibus consequuntur! Facere, ad eaque! Ipsa optio doloremque incidunt fugit eveniet? Esse odio beatae placeat? Eius ipsum voluptatem quia omnis dolorum nam, cupiditate error numquam ullam quae animi maxime autem deleniti, sunt id aperiam beatae, ratione nemo voluptates expedita. Aspernatur quaerat voluptas et commodi iste. Numquam repudiandae maxime nesciunt error sit! Tempore veniam sapiente quae aspernatur?.</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore exercitationem a, nihil commodi voluptatum ipsam voluptatem quam obcaecati, laudantium minima quae laboriosam voluptate blanditiis, magni similique! Excepturi consequatur officiis vitae laboriosam ducimus veniam nam cupiditate aliquam aut vero! Repudiandae ex possimus ipsam magni quis, natus nobis similique? Nulla, dolore officiis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, ab? Corrupti, aliquam cupiditate odit corporis nulla fugit eius odio dolor. .</p><br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore exercitationem a, nihil commodi voluptatum ipsam voluptatem quam obcaecati, laudantium minima quae laboriosam voluptate blanditiis, magni similiqueiquam aut vero! Repudiandae ex possimus olore officiis.</p>
     <!-- <details><summary>Misión</summary><p>Aca vamos a poner todos los detalles de nuestra misión.... Aca vamos a poner todos los detalles de nuestra misión....</p> </details>
     <details><summary>Visión</summary><p>Aca vamos a poner todos los detalles de nuestra visión.... Aca vamos a poner todos los detalles de nuestra visión....</p> </details>
     <details><summary>Valores</summary><p>Aca vamos a poner todos los detalles de nuestros valores.... Aca vamos a poner todos los detalles de nuestros valores....</p> </details> -->
@@ -67,7 +67,7 @@
 <div class="abajo2">
     <div class="nos">
     <h2 >Productos</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad distinctio quo commodi maiores, deserunt reprehenderit? Magni modi atque error enim blanditiis consequuntur cupiditate quo dolorem suscipit, eligendi natus. Quidem quas temporibus velit omnis minima eligendi odio sunt facilis. Fugit veritatis aperiam atque dolorum facere quam. Vel iure nulla pariatur ipsum vitae ducimus error veritatis consectetur! Cupiditate dignissimos rem in quos expedita! Culpa consectetur quis qui saepe ipsam harum natus, corrupti aperiam sit, nobis, accusantium porro obcaecati commodi? Nulla fugit consequuntur, quod nihil eius dolorem ducimus placeat molestias illo. Voluptatibus officia ea error magnam fuga magni odit, molestiae corporis assumenda repellendus.</p><br>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.  cupiditate quo dolorem suscipit, eligendi natus. Quidem quas temporibus velit omnis minima eligendi odio sunt facilis. Fugit veritatis aperiam atquessimos rem in quos expedita! Culpa consectetur quis qui saepe ipsam harum natus, corrupti aperiam sit, nobis, accusantium porro obcaecati commodi? Nulla fugit consequuntur, quod nihil eius dolorem ducimus placeat molestias illo.</p><br>
          <div class="fotos" id="Productos">
                 <img src="img/1.jpg" alt="producto1" title="Producto1">
                 <img src="img/2.jpg" alt="producto2" title="Producto2">
@@ -78,7 +78,8 @@
             </div>
                         
     </div>
-    <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. fuga ducimus minima eius officiis sit ex, veniam deleniti similique nemo magnam repellendus deserunt reprehenderit et placeat laboriosam porro recusandae, dicta minus consequuntur quidem! Exercitationem, et. Et blanditiis optio ad molestiae maiores, dolores, a quibusdam ipsa temporibus, officia consequuntur quaerat recusandae tempore facilis harum animi id ullam similique. Recusandae, labore vero dolore quibusdam amet, rerum architecto velit earum, totam exercitationem consequatur cupiditate? Ad praesentium magnam, aut quod blanditiis, voluptatem eligendi tempora illum commodi omnis labore voluptatibus ratione voluptas illo fugiat assumenda quaerat!</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. fuga ducimus minima eius officiis sit ex, veniam deleniti similique nemo magnam repellendus deserunt reprehenderit et placeat laboriosam porro recusandae, dicta minus consequuntur quidem! Exercitationem, et. Et blanditiis optio ad molestiae maiores, dolores, a quibusdam ipsa temporibus, officia consequuntur quaerat recusandae tempore facilis harum animi id ullam similique. Recusandae, labore vero dolore quibusdam amet, rerum architecto velit earum, totam exercitationem consequatur cupiditate? Ad praesentium magnam, aut quod blanditiis, voluptatem eligendi tempora illum commodi omnis labore voluptatibus ratione voluptas illo fugiat assumenda quaerat!</p>
     
 </div>
 
@@ -116,7 +117,8 @@
                 <img src="img/4.jpg" alt="producto4" title="Producto4">  -->  
 
 <div class="centrin">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum voluptates asperiores ipsum veritatis corporis vel reprehenderit praesentium ipsam. Tenetur ipsa ut temporibus reprehenderit exercitationem libero voluptatum nisi similique est quia aut beatae quo quisquam praesentium dicta magnam, fuga, porro dolore nam aliquam assumenda quam? Consectetur vitae saepe explicabo adipisci temporibus!</p>
+    <h2 id="informacion">Detalles </h2>
+    <p>Lorem ipsum dolor sit amet consectetur. Tenetur ipsa ut temporibus reprehenderit exercitationem libero voluptatum nisi similique est quia aut beatae quo quisquam praesentium dicta magnam, fuga, porro dolore nam aliquam assumenda quam? Consectetur vitae saepe explicabo adipisci temporibus!</p>
 </div>
 
 
