--- a/index.html
+++ b/index.html
@@ -69,15 +69,33 @@
     <h2 >Productos</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.  cupiditate quo dolorem suscipit, eligendi natus. Quidem quas temporibus velit omnis minima eligendi odio sunt facilis. Fugit veritatis aperiam atquessimos rem in quos expedita! Culpa consectetur quis qui saepe ipsam harum natus, corrupti aperiam sit, nobis, accusantium porro obcaecati commodi? Nulla fugit consequuntur, quod nihil eius dolorem ducimus placeat molestias illo.</p><br>
          <div class="fotos" id="Productos">
+            <div class="img-texto">
                 <img src="img/1.jpg" alt="producto1" title="Producto1">
+                <span>Aca va descripción</span>
+            </div>
+            <div class="img-texto">
                 <img src="img/2.jpg" alt="producto2" title="Producto2">
+                <span>Aca va descripción</span>
+            </div>
+            <div class="img-texto">
                 <img src="img/3.jpg" alt="producto3" title="Producto3">
+                <span>Aca va descripción</span>
+            </div>
+            <div class="img-texto">
                 <img src="img/4.jpg" alt="producto4" title="Producto4">   
+                <span>Aca va descripción</span>
+            </div>
+            <div class="img-texto">
                 <img src="img/1.jpg" alt="producto5" title="Producto5">
+                <span>Aca va descripción</span>
+            </div>
+            <div class="img-texto">
                 <img src="img/2.jpg" alt="producto6" title="Producto6">
+                <span>Aca va descripción</span>
             </div>
                         
     </div>
+
     <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. fuga ducimus minima eius officiis sit ex, veniam deleniti similique nemo magnam repellendus deserunt reprehenderit et placeat laboriosam porro recusandae, dicta minus consequuntur quidem! Exercitationem, et. Et blanditiis optio ad molestiae maiores, dolores, a quibusdam ipsa temporibus, officia consequuntur quaerat recusandae tempore facilis harum animi id ullam similique. Recusandae, labore vero dolore quibusdam amet, rerum architecto velit earum, totam exercitationem consequatur cupiditate? Ad praesentium magnam, aut quod blanditiis, voluptatem eligendi tempora illum commodi omnis labore voluptatibus ratione voluptas illo fugiat assumenda quaerat!</p>
     <br>
