--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Productos</title>
+    <title>Productos Online</title>
 </head>
 <body>
 
@@ -71,27 +71,27 @@
          <div class="fotos" id="Productos">
             <div class="img-texto">
                 <img src="img/1.jpg" alt="producto1" title="Producto1">
-                <span>Aca va descripción</span>
+                <span>Vamos a dejar los detalles completos de este producto. Puede obtener más información aqui...</span>
             </div>
             <div class="img-texto">
                 <img src="img/2.jpg" alt="producto2" title="Producto2">
-                <span>Aca va descripción</span>
+                <span>Vamos a dejar los detalles completos de este producto. Puede obtener más información aqui...</span>
             </div>
             <div class="img-texto">
                 <img src="img/3.jpg" alt="producto3" title="Producto3">
-                <span>Aca va descripción</span>
+                <span>Vamos a dejar los detalles completos de este producto. Puede obtener más información aqui...</span>
             </div>
             <div class="img-texto">
                 <img src="img/4.jpg" alt="producto4" title="Producto4">   
-                <span>Aca va descripción</span>
+                <span>Vamos a dejar los detalles completos de este producto. Puede obtener más información aqui...</span>
             </div>
             <div class="img-texto">
                 <img src="img/1.jpg" alt="producto5" title="Producto5">
-                <span>Aca va descripción</span>
+                <span>Vamos a dejar los detalles completos de este producto. Puede obtener más información aqui...</span>
             </div>
             <div class="img-texto">
                 <img src="img/2.jpg" alt="producto6" title="Producto6">
-                <span>Aca va descripción</span>
+                <span>Vamos a dejar los detalles completos de este producto. Puede obtener más información aqui...</span>
             </div>
                         
     </div>
